--- a/imports/ui/stylesheets/creative_theme/creative.css
+++ b/imports/ui/stylesheets/creative_theme/creative.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
 }
 body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  /*font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;*/
 }
 hr.short {
   border-width: 3px;
@@ -39,6 +39,7 @@ div.flex-column {
   display: flex;
   flex-direction: column;
   box-sizing: initial;
+  justify-content: center;
 }
 /*
 @media (min-width: 800px) {
@@ -189,12 +190,16 @@ header .header-content .header-content-inner hr {
 header .header-content .header-content-inner p {
   font-weight: 300;
   color: rgba(255, 255, 255, 0.7);
-  font-size: 16px;
+  font-size: 18px;
   margin-bottom: 50px;
 }
 
 .section-heading {
   margin-top: 0;
+}
+.section-heading p {
+  font-size: 18px;
+  font-weight: 300;
 }
 .service-box {
   max-width: 400px;
