--- a/imports/ui/stylesheets/creative_theme/creative.css
+++ b/imports/ui/stylesheets/creative_theme/creative.css
@@ -33,6 +33,9 @@ div.flex-row {
   flex-direction: row;
   justify-content: center;
 }
+div.flex-row-spaced {
+  justify-content: space-around;
+}
 div.flex-column {
   width: 100%;
   max-width: 800px;
@@ -385,6 +388,10 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl {
   padding: 15px 30px;
 }
+.btn-sm {
+  border-radius: 20px;
+  margin: 5px;
+}
 ::-moz-selection {
   color: white;
   text-shadow: none;
@@ -415,4 +422,39 @@ footer {
 }
 .footer-block {
   height: 65px;
+}
+btn.flex-wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  text-align: center;
+  margin: 20px auto;
+  background-color: rgba(0,0,0,0.05);;
+}
+.card-wide {
+  width: 250px;
+  min-height:175px;
+}
+.card-slim {
+  width: 175px;
+  height: 250px;
+}
+.card-title {
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.9);
+  font-size: 24px;
+  padding: 20px 10px 10px 10px;
+}
+.card-description {
+  color: rgba(0, 0, 0, 0.7);
+  font-weight: 300;
+  font-size: 18px;
+  padding: 10px 10px 20px 10px;
 }
