--- a/imports/ui/stylesheets/creative_theme/creative.css
+++ b/imports/ui/stylesheets/creative_theme/creative.css
@@ -44,6 +44,9 @@ div.flex-column {
   box-sizing: initial;
   justify-content: center;
 }
+div.flex-column-ranking {
+  width: auto;
+}
 /*
 @media (min-width: 800px) {
   div.vertical-width-restricted {
@@ -431,12 +434,13 @@ btn.flex-wrap {
   flex-wrap: wrap;
 }
 .card {
+  display: inline-block;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   text-align: center;
   margin: 20px auto;
-  background-color: rgba(0,0,0,0.05);;
+  background-color: rgba(0,0,0,0.05);
 }
 .card-wide {
   width: 250px;
@@ -446,15 +450,23 @@ btn.flex-wrap {
   width: 175px;
   height: 250px;
 }
+.card-title-only {
+  margin:  10px auto;
+}
 .card-title {
   font-weight: 500;
   color: rgba(0, 0, 0, 0.9);
   font-size: 24px;
-  padding: 20px 10px 10px 10px;
+  padding: 5px 10px;
 }
 .card-description {
   color: rgba(0, 0, 0, 0.7);
   font-weight: 300;
   font-size: 18px;
   padding: 10px 10px 20px 10px;
+}
+.rank-row {
+  width: 100%;
+  display:  flex;
+  justify-content:  space-between;
 }
