--- a/imports/ui/stylesheets/creative_theme/creative.css
+++ b/imports/ui/stylesheets/creative_theme/creative.css
@@ -27,16 +27,19 @@ hr.footer {
 span.primary {
   color: #F05F40;
 }
-div.flex-row {
+.flex-row {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-div.flex-row-spaced {
+.flex-row-wrap {
+  flex-wrap: wrap;
+}
+.flex-row-spaced {
   justify-content: space-around;
 }
-div.flex-column {
+.flex-column {
   width: 100%;
   max-width: 800px;
   display: flex;
@@ -44,23 +47,9 @@ div.flex-column {
   box-sizing: initial;
   justify-content: center;
 }
-div.flex-column-ranking {
+.flex-column-ranking {
   width: auto;
 }
-/*
-@media (min-width: 800px) {
-  div.vertical-width-restricted {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    position: relative;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 800px;
-  }
-}
-*/
 a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
@@ -426,13 +415,6 @@ footer {
 .footer-block {
   height: 65px;
 }
-btn.flex-wrap {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-}
 .card {
   display: inline-block;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -440,7 +422,7 @@ btn.flex-wrap {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   text-align: center;
   margin: 20px auto;
-  background-color: rgba(0,0,0,0.05);
+  background-color: #F3F3F3;
 }
 .card-wide {
   width: 250px;
